--- a/backend/lib/noson/docs/extradoxygen.css
+++ b/backend/lib/noson/docs/extradoxygen.css
@@ -1,9 +1,7 @@
 /* The standard CSS for doxygen */
 
 body, table, div, p, dl {
-	font-family: Lucida Grande, Verdana, Geneva, Arial, sans-serif;
-	font-size: 13px;
-	line-height: 1.3;
+	font: 300 14px/22px lato,sans-serif;
 }
 
 /* @group Heading Levels */
@@ -13,6 +11,7 @@ h1 {
 }
 
 .title {
+  font: 200 14px/28px lato,sans-serif;
 	font-size: 150%;
 	font-weight: bold;
 	margin: 10px 2px;
@@ -24,6 +23,14 @@ h2 {
 
 h3 {
 	font-size: 100%;
+}
+
+.tabs, .tabs2, .tabs3 {
+  font-family: lato,Arial,sans-serif;
+}
+
+table.directory {
+    font: 400 14px lato,Arial,sans-serif;
 }
 
 dt {
@@ -136,16 +143,18 @@ dl.el {
 	margin-left: -1cm;
 }
 
+
 div.line {
 	font-family: monospace, fixed;
-        font-size: 12px;
-	min-height: 15px;
+  font-size: 100%;
+	min-height: 18px;
 	line-height: 1.0;
 }
 
-.fragment {
-	font-family: monospace, fixed;
-	font-size: 105%;
+div.fragment {
+  border: none;
+  padding: 0px 0px;
+  margin: 0px 0px 0px 0px;
 }
 
 pre.fragment {
@@ -195,9 +204,9 @@ body {
 }
 
 div.contents {
-	margin-top: 10px;
-	margin-left: 8px;
-	margin-right: 8px;
+	margin-top: 4px;
+	margin-left: 4px;
+	margin-right: 4px;
 }
 
 td.indexkey {
@@ -524,8 +533,14 @@ dl.reflist dd {
 
 /* for the tree view */
 
+#nav-tree .label {
+  margin:0px;
+  padding:0px;
+  font: 14px lato,Arial,sans-serif;
+}
+
 .ftvtree {
-	font-family: sans-serif;
+	font-family: lato,Arial,sans-serif;
 	margin: 0px;
 }
 
@@ -733,6 +748,7 @@ table.fieldtable {
 	display:block;
 	text-decoration: none;
 	outline: none;
+  font-family: lato,Arial,sans-serif;
 }
 
 .navpath li.navelem a:hover
@@ -856,21 +872,21 @@ dl.bug
  
 #projectname
 {
-	font: 300% Tahoma, Arial,sans-serif;
+	font: 200% lato, Arial,sans-serif;
 	margin: 0px;
 	padding: 2px 0px;
 }
     
 #projectbrief
 {
-	font: 120% Tahoma, Arial,sans-serif;
+	font: 120% lato, Arial,sans-serif;
 	margin: 0px;
 	padding: 0px;
 }
 
 #projectnumber
 {
-	font: 50% Tahoma, Arial,sans-serif;
+	font: 50% lato, Arial,sans-serif;
 	margin: 0px;
 	padding: 0px;
 }
