add translations for language de

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -143,5 +143,6 @@
         <file>images/go-down.svg</file>
         <file>components/AlarmsEmptyState.qml</file>
         <file>images/sync.svg</file>
+        <file>i18n/noson_de.qm</file>
     </qresource>
 </RCC>
