improve speed startup
The music index is no longer loaded at startup, but on entering to the new section « My Index »

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -144,5 +144,8 @@
         <file>components/AlarmsEmptyState.qml</file>
         <file>images/sync.svg</file>
         <file>i18n/noson_de.qm</file>
+        <file>ui/Index.qml</file>
+        <file>components/IndexEmptyState.qml</file>
+        <file>components/MusicFilter.qml</file>
     </qresource>
 </RCC>
