--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -153,5 +153,6 @@
         <file>images/folder_composer.png</file>
         <file>ui/Composers.qml</file>
         <file>ui/ComposerView.qml</file>
+        <file>components/IndexUpdateState.qml</file>
     </qresource>
 </RCC>
