new assets for sound settings

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -155,5 +155,7 @@
         <file>ui/ComposerView.qml</file>
         <file>components/IndexUpdateState.qml</file>
         <file>components/ServiceEmptyState.qml</file>
+        <file>images/settings.svg</file>
+        <file>components/Dialog/DialogSoundSettings.qml</file>
     </qresource>
 </RCC>
