add some tv handling

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -23,6 +23,7 @@
         <file>images/grip.svg</file>
         <file>images/group.svg</file>
         <file>images/input.svg</file>
+        <file>images/tv.svg</file>
         <file>images/no_cover.png</file>
         <file>images/none.png</file>
         <file>images/noson.png</file>
