--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -159,5 +159,6 @@
         <file>components/Dialog/DialogSoundSettings.qml</file>
         <file>images/tv.png</file>
         <file>images/linein.png</file>
+        <file>i18n/noson_da.qm</file>
     </qresource>
 </RCC>
