improve last.fm setting

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -172,5 +172,6 @@
         <file>ui/ThisDevice/ShuffleButton.qml</file>
         <file>components/Dialog/DialogAbout.qml</file>
         <file>components/Dialog/DialogApplicationSettings.qml</file>
+        <file>images/lastfm.svg</file>
     </qresource>
 </RCC>
