show the logo of the thumbnails providers
To comply with the guidelines of providers:
- Each application using Deezer API must have to include a clearly visible Deezer Logo

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -173,5 +173,6 @@
         <file>components/Dialog/DialogAbout.qml</file>
         <file>components/Dialog/DialogApplicationSettings.qml</file>
         <file>images/lastfm.png</file>
+        <file>images/deezer.png</file>
     </qresource>
 </RCC>
