Initial basic working sfos version.
Can add music source
Select a zone
Browse a service
Play to a zone
View playlist

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -175,5 +175,89 @@
         <file>images/lastfm.png</file>
         <file>images/deezer.png</file>
         <file>sfos/harbour-noson.qml</file>
+        <file>sfos/cover/CoverPage.qml</file>
+        <file>sfos/pages/AddService.qml</file>
+        <file>sfos/pages/AddToPlaylist.qml</file>
+        <file>sfos/pages/Alarms.qml</file>
+        <file>sfos/pages/Albums.qml</file>
+        <file>sfos/pages/Artists.qml</file>
+        <file>sfos/pages/ArtistView.qml</file>
+        <file>sfos/pages/Composers.qml</file>
+        <file>sfos/pages/ComposerView.qml</file>
+        <file>sfos/pages/Favorites.qml</file>
+        <file>sfos/pages/Genres.qml</file>
+        <file>sfos/pages/Group.qml</file>
+        <file>sfos/pages/Index.qml</file>
+        <file>sfos/pages/MusicServices.qml</file>
+        <file>sfos/pages/NowPlaying.qml</file>
+        <file>sfos/pages/NoZoneState.qml</file>
+        <file>sfos/pages/Playlists.qml</file>
+        <file>sfos/pages/QueueView.qml</file>
+        <file>sfos/pages/Service.qml</file>
+        <file>sfos/pages/SongsView.qml</file>
+        <file>sfos/pages/ThisDevice.qml</file>
+        <file>sfos/pages/Welcome.qml</file>
+        <file>sfos/pages/Zones.qml</file>
+        <file>sfos/components/Dialog/DialogAbout.qml</file>
+        <file>sfos/components/Dialog/DialogAlarm.qml</file>
+        <file>sfos/components/Dialog/DialogApplicationSettings.qml</file>
+        <file>sfos/components/Dialog/DialogBase.qml</file>
+        <file>sfos/components/Dialog/DialogManageQueue.qml</file>
+        <file>sfos/components/Dialog/DialogNewPlaylist.qml</file>
+        <file>sfos/components/Dialog/DialogRemovePlaylist.qml</file>
+        <file>sfos/components/Dialog/DialogSearchMusic.qml</file>
+        <file>sfos/components/Dialog/DialogSelectSource.qml</file>
+        <file>sfos/components/Dialog/DialogSettings.qml</file>
+        <file>sfos/components/Dialog/DialogSleepTimer.qml</file>
+        <file>sfos/components/Dialog/DialogSongInfo.qml</file>
+        <file>sfos/components/Dialog/DialogSoundSettings.qml</file>
+        <file>sfos/components/Delegates/Card.qml</file>
+        <file>sfos/components/Delegates/DragMusicListItem.qml</file>
+        <file>sfos/components/Delegates/MusicListItem.qml</file>
+        <file>sfos/components/Delegates/SelectMusicListItem.qml</file>
+        <file>sfos/components/Delegates/SimpleListItem.qml</file>
+        <file>sfos/components/Flickables/MultiSelectListView.qml</file>
+        <file>sfos/components/Flickables/MusicGridView.qml</file>
+        <file>sfos/components/Flickables/MusicListView.qml</file>
+        <file>sfos/components/ListItemActions/AddToFavorites.qml</file>
+        <file>sfos/components/ListItemActions/AddToPlaylist.qml</file>
+        <file>sfos/components/ListItemActions/AddToQueue.qml</file>
+        <file>sfos/components/ListItemActions/Remove.qml</file>
+        <file>sfos/components/ViewButton/PlayAllButton.qml</file>
+        <file>sfos/components/ViewButton/QueueAllButton.qml</file>
+        <file>sfos/components/ViewButton/ShuffleButton.qml</file>
+        <file>sfos/components/ActivitySpinner.qml</file>
+        <file>sfos/components/AlarmsEmptyState.qml</file>
+        <file>sfos/components/BlurredBackground.qml</file>
+        <file>sfos/components/ClockTumbler.qml</file>
+        <file>sfos/components/CoverGrid.qml</file>
+        <file>sfos/components/NosonIcon.qml</file>
+        <file>sfos/components/IndexEmptyState.qml</file>
+        <file>sfos/components/IndexUpdateState.qml</file>
+        <file>sfos/components/MusicCheckBox.qml</file>
+        <file>sfos/components/MusicFilter.qml</file>
+        <file>sfos/components/MusicHeader.qml</file>
+        <file>sfos/components/MusicPage.qml</file>
+        <file>sfos/components/MusicRow.qml</file>
+        <file>sfos/components/MusicToolbar.qml</file>
+        <file>sfos/components/NowPlayingFullView.qml</file>
+        <file>sfos/components/NowPlayingSidebar.qml</file>
+        <file>sfos/components/NowPlayingToolbar.qml</file>
+        <file>sfos/components/Player.qml</file>
+        <file>sfos/components/PlaylistsEmptyState.qml</file>
+        <file>sfos/components/PopInfo.qml</file>
+        <file>sfos/components/Queue.qml</file>
+        <file>sfos/components/RenderingBubble.qml</file>
+        <file>sfos/components/RenderingControlerView.qml</file>
+        <file>sfos/components/ServiceEmptyState.qml</file>
+        <file>sfos/components/ServiceLogin.qml</file>
+        <file>sfos/components/ServiceRegistration.qml</file>
+        <file>sfos/components/SimpleRow.qml</file>
+        <file>sfos/components/StyledSlider.qml</file>
+        <file>sfos/components/StyleLight.qml</file>
+        <file>sfos/components/TrackQueue.qml</file>
+        <file>sfos/components/Units.qml</file>
+        <file>sfos/components/ZoneControls.qml</file>
     </qresource>
+    
 </RCC>
