a ton of fix ...
For instance no way to manage drag/drop and contextual menu

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -267,5 +267,6 @@
         <file>sfos/pages/ThisDevice/ShuffleButton.qml</file>
         <file>sfos/pages/ThisDevice/SongsView.qml</file>
         <file>sfos/components/MusicIcon.qml</file>
+        <file>sfos/components/Delegates/DragSelectMusicListItem.qml</file>
     </qresource>
 </RCC>
