--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -268,5 +268,9 @@
         <file>sfos/pages/ThisDevice/SongsView.qml</file>
         <file>sfos/components/MusicIcon.qml</file>
         <file>sfos/components/Delegates/DragSelectMusicListItem.qml</file>
+        <file>sfos/images/noson.svg</file>
+        <file>sfos/images/noson-86x86.png</file>
+        <file>sfos/images/noson-108x108.png</file>
+        <file>sfos/images/noson-128x128.png</file>
     </qresource>
 </RCC>
