refactor icon animation

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -174,5 +174,6 @@
         <file>components/Dialog/DialogApplicationSettings.qml</file>
         <file>images/lastfm.png</file>
         <file>images/deezer.png</file>
+        <file>images/download.svg</file>
     </qresource>
 </RCC>
