[SFOS] make the volume bubble

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -276,5 +276,7 @@
         <file>sfos/images/harbour-noson-108x108.png</file>
         <file>sfos/images/harbour-noson-128x128.png</file>
         <file>sfos/images/harbour-noson.svg</file>
+        <file>sfos/images/icon-m-settings.svg</file>
+        <file>sfos/images/icon-m-grip.svg</file>
     </qresource>
 </RCC>
