[SFOS] show page failure state on data failure

--- a/gui/noson.qrc
+++ b/gui/noson.qrc
@@ -276,5 +276,6 @@
         <file>sfos/images/icon-m-settings.svg</file>
         <file>sfos/images/icon-m-grip.svg</file>
         <file>components/DataFailureState.qml</file>
+        <file>sfos/components/DataFailureState.qml</file>
     </qresource>
 </RCC>
