--- a/gui/noson_controls2.qrc
+++ b/gui/noson_controls2.qrc
@@ -178,5 +178,7 @@
         <file>images/Deezer_Logo_RVB_Black.svg</file>
         <file>images/Deezer_Logo_RVB_White.svg</file>
         <file>controls2/components/Dialog/DialogServiceLabel.qml</file>
+        <file>controls2/ThisDevice/Composers.qml</file>
+        <file>controls2/ThisDevice/ComposerView.qml</file>
     </qresource>
 </RCC>
