--- a/gui/noson_controls2_515.qrc
+++ b/gui/noson_controls2_515.qrc
@@ -176,5 +176,7 @@
         <file alias="controls2/ThisDevice/ComposerView.qml">controls2_515/ThisDevice/ComposerView.qml</file>
         <file alias="controls2/Library.qml">controls2_515/Library.qml</file>
         <file>toolbox.js</file>
+        <file>images/folder_track.png</file>
+        <file>images/folder_share.png</file>
     </qresource>
 </RCC>
